--- a/front-end/src/app/Components/header/header.component.html
+++ b/front-end/src/app/Components/header/header.component.html
@@ -1,4 +1,67 @@
-<p>header works!</p>
-<h1>{{ title }} + {{text}}</h1>
-<button (click)="buttonEvent()"></button>
-<app-button (clicked)="buttonEvent()" text="BUTTON" ></app-button>
+<div class=" w-full bg-violet-800">
+<!--  <div class=" py-3 px-6">-->
+    <div class="flex w-full  justify-between">
+
+      <div routerLink="/" class="flex mx-6 items-center cursor-pointer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="bevel"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+        <span class="ml-2 font-bold text-white">MY RH</span>
+      </div>
+
+<!--      <div class="ml-6 flex flex-1 gap-x-3">
+
+
+        <input type="text" class="w-full rounded-md border border-[#DDE2E4] px-3 py-2 text-sm" value="DJI phantom" />
+      </div>-->
+
+      <div class="mx-6 flex">
+        <div *ngIf="!isLoged && !isLogedAg" routerLink="/register" class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span class="text-sm font-medium">Sign up</span>
+        </div>
+        <div *ngIf="!isLoged && !isLogedAg" routerLink="/login" class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span  class="text-sm font-medium">Sign in</span>
+        </div>
+        <div *ngIf="isLoged" class="ml-2 flex items-center gap-x-1 rounded-md  py-2 px-4 ">
+          <span  class="text-sm font-medium">Rh</span>
+        </div>
+        <div *ngIf="isLoged" routerLink="/form"  class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span  class="text-sm font-medium">Add Job Offer</span>
+        </div>
+        <div *ngIf="isLoged" routerLink="/login" (click)="logout()" class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span  class="text-sm font-medium">Log out</span>
+        </div>
+        <div *ngIf="isLogedAg" class="ml-2 flex items-center gap-x-1 rounded-md  py-2 px-4 ">
+          <span  class="text-sm font-medium">AGENT</span>
+        </div>
+        <div *ngIf="isLogedAg" routerLink="/agent/dash" class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span  class="text-sm font-medium">Requests</span>
+        </div>
+        <div *ngIf="isLogedAg" routerLink="/agent/login" (click)="logoutAg()" class="ml-2 flex cursor-pointer items-center gap-x-1 rounded-md border py-2 px-4 hover:bg-gray-100">
+          <span  class="text-sm font-medium">Log out</span>
+        </div>
+      </div>
+
+    </div>
+
+<!--    <div class="mt-4 flex items-center justify-between">-->
+<!--      <div class="flex gap-x-2 py-1 px-2">-->
+<!--        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500" viewBox="0 0 20 20" fill="currentColor">-->
+<!--          <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />-->
+<!--        </svg>-->
+<!--        <span class="text-sm font-medium">California</span>-->
+<!--      </div>-->
+
+<!--      <div class="flex gap-x-8">-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Best seller</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">New Releases</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Books</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Computers</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Fashion</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Health</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Pharmacy</span>-->
+<!--        <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Toys & Games</span>-->
+<!--      </div>-->
+
+<!--      <span class="cursor-pointer rounded-sm py-1 px-2 text-sm font-medium hover:bg-gray-100">Becoma a seller</span>-->
+<!--    </div>-->
+<!--  </div>-->
+</div>
