--- a/front-end/src/app/Pages/agent-login/agent-login.component.html
+++ b/front-end/src/app/Pages/agent-login/agent-login.component.html
@@ -5,15 +5,15 @@
   }
 </style>-->
 <div class="h-screen flex ">
-<!--  <div class="hidden lg:flex w-full lg:w-1/2 login_img_section-->
-<!--          justify-around items-center">-->
+  <!--  <div class="hidden lg:flex w-full lg:w-1/2 login_img_section-->
+  <!--          justify-around items-center">-->
 
-<!--  </div>-->
+  <!--  </div>-->
   <div class="flex w-full rounded-xl lg:w-1/3 justify-center items-center m-auto bg-white space-y-8">
     <div class="w-full ">
-      <form (ngSubmit)="login()" class="bg-white rounded-md shadow-2xl p-5">
+      <form (ngSubmit)="loginAgent()" class="bg-white rounded-md shadow-2xl p-5">
         <h1 class="text-gray-800 font-bold text-2xl mb-1">Welcome Back!</h1>
-        <h3 class="text-sm font-normal text-gray-600 mb-8">RH</h3>
+        <h3 class="text-sm font-normal text-gray-600 mb-8">AGENT</h3>
         <div class="flex items-center border-2 mb-8 py-2 px-3 rounded-2xl">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
